--- a/ArtSpace/Views/Account/ForgotPassword.cshtml
+++ b/ArtSpace/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ArtSpace.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "¿Olvidó su contraseña?";
+    ViewBag.Title = "¿Olvidó la contraseña?";
 }
 
 <h2>@ViewBag.Title.</h2>
