--- a/ArtSpace/Views/Account/VerifyCode.cshtml
+++ b/ArtSpace/Views/Account/VerifyCode.cshtml
@@ -9,7 +9,7 @@
     @Html.AntiForgeryToken()
     @Html.Hidden("provider", @Model.Provider)
     @Html.Hidden("rememberMe", @Model.RememberMe)
-    <h4>Escribir el código de verificación</h4>
+    <h4>Introducir código de verificación</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
