--- a/ArtSpace/Views/Manage/SetPassword.cshtml
+++ b/ArtSpace/Views/Manage/SetPassword.cshtml
@@ -5,8 +5,8 @@
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    No dispone de un nombre de usuario o contraseña local para este sitio. Agregue una cuenta
-    local para iniciar sesión sin que sea necesario ningún inicio de sesión externo.
+    No tiene un nombre de usuario y contraseña local para este sitio. Agregue una cuenta
+    local para que pueda iniciar sesión sin un inicio de sesión externo.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
