--- a/ArtSpace/Views/Shared/_LoginPartial.cshtml
+++ b/ArtSpace/Views/Shared/_LoginPartial.cshtml
@@ -1,26 +1,51 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@{ 
+    string num = Session["ItemTotal"].ToString();
+}
+@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
+    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-nav ml-auto" }))
     {
-    @Html.AntiForgeryToken()
-
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hola " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Cerrar sesión</a></li>
-    </ul>
+        @Html.AntiForgeryToken()
+        String name = @Session["name"].ToString();
+<ul class="navbar-nav ml-auto">
+    <li class="flo">
+        @Html.ActionLink("¡Hola " + name + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link" })
+    </li>
+    <li><a href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Cerrar sesión</a></li>
+    <li>
+        <a class="btn" href="@Url.Action("Index", "Carro")">
+            <i class="fa fa-shopping-cart" style="color:lightgoldenrodyellow"> </i>
+            
+        </a>
+    </li>
+    <li class="d-flex nav-link text-center">
+        @using (Html.BeginForm("buscarProd", "Catalogo", FormMethod.Post, new { @class = "buscar" }))
+        {
+            <input type="text" placeholder="Nombre producto" required id="nomBuscar" name="nomBuscar" />
+            <button class="boton btn-danger" type="submit" value="submit"><i class="fas fa-search"></i></button>
+        }
+    </li>
+</ul>
     }
 }
 else
 {
-<ul class="navbar-nav ml-auto justify-content-center">
+<uld class="navbar-nav ml-auto justify-content-center">
     <li>@Html.ActionLink("Registrarse", "Register", "Account", new { id = "registerLink" }, new { @class = "nav-link" })</li>
     <li>@Html.ActionLink("Iniciar sesión", "Login", "Account", new { id = "loginLink" }, new { @class = "nav-link" })</li>
-    <li class="d-flex justify-content-center">
-        <img src="~/resources/search.png" />
-        <img src="~/resources/buy.png" />
-
-</ul>
+    <li>
+        <a class="btn" href="@Url.Action("Index", "Carro")">
+            <i class="fa fa-shopping-cart" style="color:lightgoldenrodyellow"> </i>
+            
+        </a>
+    </li>
+    <li class="d-flex nav-link text-center">
+        @using (Html.BeginForm("buscarProd", "Catalogo", FormMethod.Post, new { @class = "buscar" }))
+        {
+            <input type="text" placeholder="Nombre producto" required id="nomBuscar" name="nomBuscar" />
+            <button class="boton btn-danger" type="submit" value="submit"><i class="fas fa-search"></i></button>
+        }
+    </li>
+</uld>
 }
