--- a/ArtSpace/Views/Account/ResetPassword.cshtml
+++ b/ArtSpace/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArtSpace.Models.ResetPasswordViewModel
+﻿@model Tienda1.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Restablecer contraseña";
 }
