--- a/ArtSpace/Views/Manage/AddPhoneNumber.cshtml
+++ b/ArtSpace/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArtSpace.Models.AddPhoneNumberViewModel
+﻿@model Tienda1.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Número de teléfono";
 }
