--- a/ArtSpace/Views/Manage/ChangePassword.cshtml
+++ b/ArtSpace/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model ArtSpace.Models.ChangePasswordViewModel
+﻿@model Tienda1.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Cambiar contraseña";
 }
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Formulario para cambiar contraseña</h4>
+    <h4>Formulario para cambiar la contraseña</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
